fix: use rem for media queries to avoid overflow when 1rem > 16px

--- a/styles/article.scss
+++ b/styles/article.scss
@@ -22,7 +22,7 @@
     padding-bottom: 0.3em;
   }
 
-  @media screen and (min-width: 641px) {
+  @media screen and (min-width: 40.01rem) {
     .article h1:not([class]) {
       font-size: 4.5rem;
     }
